      versions. To retain compatibility with glibc we now define
      __WORDSIZE_COMPAT32. If you are certain that you will never use
      glibc nor run in i386 mode on your x86_64 installation, you can
      remove this definition from wordsize.h.
      Otherwise you have to delete /var/run/utmp on x86_64 hosts when
      upgrading to 0.9.31


0.9.27	12 January 2005

    This has been a long time in the making...  Release highlights:
	o New stdio implementation
	o New optimized string functions
	o Major improvements to the shared lib loader
	o Shared libraries work properly on powerpc
	o Debugging works on mips
	o New architectures: frv, nios, nios2, bfin
	o Linux 2.6.x kernel support
	o Lots and lots of bug fixes

    This release is NOT binary compatible with uClibc 0.9.26 or any earlier
    release, so be prepared to recompile your software if you are still using
    an old version of uClibc.

 -Erik



0.9.26	3 January 2004

    This simply adds a fix for a pthread bug that was noticed a few hours
    after the previous release.  Otherwise identical to 0.9.25.

    This release remains binary compatible with uClibc 0.9.21-25 as long as
    you take care to avoid any configuraton changes that will break things.
    We _were_ planning to break binary compatibilty in this release, but
    decided to hold those changes so we could push out a bugfix release.

    We _will_ break binary compatibilty in the upcoming 0.9.27 release to
    implement a few things we have been postponing.  That should hopefully be
    the last ABI change before we freeze the ABI for the upcoming 1.0.x
    stable uClibc series.

Release highlights:
    o A trivial fix for a pthread bug
    o Nothing else

 -Erik



0.9.25	3 January 2004

See Changelog.full for the complete list of who did what.

Note:
    This release remains binary compatible with uClibc 0.9.21-24 as long as
    you take care to avoid any configuraton changes that will break things.